responsiveness bug fixes w overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,6 +11,7 @@
     --background-color: white;
     --secondary-color: gray;
     --tile-background-color: rgb(222, 222, 222);
+    --navbar-height: '';
 }
 
 body {
@@ -43,7 +44,9 @@ button {
     padding: 1rem 2rem;
     display: grid;
     grid-template-columns: 1fr 1fr;
+    gap: 2rem;
     align-items: center;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
 }
 
 .logo {
@@ -332,7 +335,7 @@ footer {
 }
 
 .project-image img {
-    max-height: calc(1.1 * 100%); /* set height relative to parent */
+    max-height: calc(2 * 100%); 
     width: auto; 
     object-fit: contain; 
 }
@@ -376,7 +379,7 @@ footer {
 
 @media screen and (max-width: 585px) {
 
-    body {
+    html, body {
         width: 100vw;
         overflow-x: hidden;
     }
@@ -394,13 +397,15 @@ footer {
     }
 
     .nav-links {
-        position: absolute;
+        /* position: absolute; */
+        position: fixed;
         visibility: hidden;
         transform: translateX(100%);
-        top: 100%; 
+        /* top: 100%;  */
+        top: var(--navbar-height);
         left: 0; 
         width: 100%;
-        height: 100vh;
+        height: calc(100vh - var(--navbar-height));
         background-color: var(--primary-color);
         grid-template-columns: 1fr;
         text-align: center;
